--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <input type="file" id="uploadFile" accept=".xlsx">
     <p>Click the button below to reveal the next winner!</p>
     <button id="revealButton" disabled>Reveal Next Winner</button>
+    <h2>Gift Card Inventory</h2>
+    <div id="giftCardInventory"></div>
+    <h2>Winner List</h2>
+    <div id="winnerList"></div>
 </body>
 
 </html>
