--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1>Raffle Drawing</h1>
     <p>Upload the attendee file to set up the raffle:</p>
     <input type="file" id="uploadFile" accept=".xlsx">
+    <button id="clearStateButton">Clear (Start Over)</button>
     <p>Click the button below to reveal the next winner!</p>
     <button id="revealButton" disabled>Reveal Next Winner</button>
     <h2>Gift Card Inventory</h2>
